-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.2, 6.9.0 Beta2
-
None
-
-
a773b7a3a (dev), b2489f7d7 (6.9), 8a18d4651 (6.8), d1b3a0260 (tqtc/lts-6.5)
-
Multimedia, weeks 9-10
MacOS 15.3.1
Qt Creator 15.0.1
Qt 6.9.0b2
Device: Samsung Galaxy S22 14.0, Pixel 3a 13.0
Steps to reproduce:
- Run a declarative camera example on Android device.
- Try to record a video.
Expected: The video is recorded.
Actual: The video cannot be recorded, because of missing codecs:
W/qt.multimedia.ffmpeg.videoencoder: Couldn't open video encoder "hevc_mediacodec" ; result: "Invalid argument" W/qt.multimedia.ffmpeg.videoencoder: Couldn't open video encoder "hevc_mediacodec" ; result: "Invalid argument" W/qt.multimedia.ffmpeg.videoencoder: No valid video codecs found
Reproducibility: 100%
- is duplicated by
-
QTBUG-134477 Android: Regression for recording video
-
- Closed
-
- relates to
-
QTQAINFRA-6991 Qt Test Attack - 02, 2025
-
- Open
-